--- a/src/components/nav/header.css
+++ b/src/components/nav/header.css
@@ -3,6 +3,12 @@
   justify-content: center;
 }
 
+#PPContainer {
+  width: 100px;
+  height: 100px;
+  margin-right: 40px;
+}
+
 header {
   align-items: center;
   padding-top: 75px;
@@ -16,8 +22,6 @@ header {
   max-height: 100px;
   filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.35));
   border-radius: 10px;
-  align-self: center;
-  margin-right: 40px;
   transition: 0.1s;
 }
 
